[gd_scene load_steps=4 format=3 uid="uid://ccqrajktegpid"]

[ext_resource type="Script" path="res://educate.gd" id="1_bqa2d"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="2_u8pnc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_80nb2"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = -0.54
anchor_top = -0.384
anchor_right = -0.22
anchor_bottom = -0.384
offset_left = 617.08
offset_top = 248.832
offset_right = 1410.44
offset_bottom = 884.832
script = ExtResource("1_bqa2d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = -39.0
offset_right = 1210.0
offset_bottom = 703.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 15.0
offset_right = 1049.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0.921569, 0.47451, 0.0862745, 1)
theme_override_fonts/font = ExtResource("2_u8pnc")
theme_override_font_sizes/font_size = 91
text = "SECURITY BREACH!"

[node name="Label2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 168.0
offset_right = 961.0
offset_bottom = 337.0
theme_override_fonts/normal_font = ExtResource("2_u8pnc")
theme_override_font_sizes/normal_font_size = 32
text = "Place holder text"
fit_content = true

[node name="OptionA" type="Button" parent="."]
process_priority = 1
light_mask = 1048575
visibility_layer = 1048575
layout_mode = 0
offset_left = 90.0
offset_top = 378.0
offset_right = 377.0
offset_bottom = 636.0
theme_override_fonts/font = ExtResource("2_u8pnc")
theme_override_font_sizes/font_size = 25
clip_text = true

[node name="RichTextLabel" type="RichTextLabel" parent="OptionA"]
layout_mode = 0
offset_left = 3.0
offset_right = 289.0
offset_bottom = 252.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_u8pnc")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Place Holder"

[node name="TextureRect" type="TextureRect" parent="OptionA"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 292.0
offset_bottom = 258.0

[node name="OptionB" type="Button" parent="."]
process_priority = 1
layout_mode = 0
offset_left = 434.0
offset_top = 377.0
offset_right = 724.0
offset_bottom = 633.0
theme_override_fonts/font = ExtResource("2_u8pnc")
theme_override_font_sizes/font_size = 25
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
clip_text = true

[node name="RichTextLabel" type="RichTextLabel" parent="OptionB"]
layout_mode = 0
offset_right = 286.0
offset_bottom = 252.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_u8pnc")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Place Holder"

[node name="TextureRect" type="TextureRect" parent="OptionB"]
layout_mode = 0
offset_right = 292.0
offset_bottom = 256.0

[node name="OptionC" type="Button" parent="."]
process_priority = 1
layout_mode = 0
offset_left = 788.0
offset_top = 379.0
offset_right = 1079.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("2_u8pnc")
theme_override_font_sizes/font_size = 25
clip_text = true

[node name="RichTextLabel" type="RichTextLabel" parent="OptionC"]
layout_mode = 0
offset_right = 286.0
offset_bottom = 252.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_u8pnc")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Place Holder"

[node name="TextureRect" type="TextureRect" parent="OptionC"]
layout_mode = 0
offset_right = 290.0
offset_bottom = 259.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 980.0
offset_top = 128.0
offset_right = 1093.0
offset_bottom = 387.0
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_80nb2")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2

[node name="WaitTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Countdown" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 201.0
offset_right = 121.0
offset_bottom = 277.0
theme_override_fonts/font = ExtResource("2_u8pnc")
theme_override_font_sizes/font_size = 76
text = "10"

[connection signal="pressed" from="OptionA" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="OptionB" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="OptionC" to="." method="_on_option_c_pressed"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
